force-app/main/default/objects/Account/fields/Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Info__c</fullName>
    <description>Account Information V3</description>
    <label>Account_Info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>