force-app/main/default/objects/Account/fields/Business_Info__c.field-meta.xml
<CustomField>
    <fullName>Business_Info__c</fullName>
    <description>Business Information</description>
    <label>Business Info</label>
    <length>40</length>
    <type>Text</type>
</CustomField>