force-app/main/default/objects/Account/fields/test_11__c.field-meta.xml
<CustomField>
    <fullName>test_11__c</fullName>
    <description>test_11</description>
    <label>test_11</label>
    <length>50</length>
    <type>Text</type>
</CustomField>