force-app/main/default/objects/Account/fields/test_23__c.field-meta.xml
<CustomField>
    <fullName>test_23__c</fullName>
    <description>test_23_test_09</description>
    <label>test_23</label>
    <length>50</length>
    <type>Text</type>
</CustomField>